<resources>
    <string name="app_name">ThunderSimLineup</string>
    <string name="title_vehicles">Vehicles</string>
    <string name="title_event_log">Event log</string>
    <string name="title_preferences">Preferences</string>
    <string name="team_a_title">Team A</string>
    <string name="favorites">Favorites</string>
    <string name="tanks_title">Tanks</string>
    <string name="planes_title">Planes</string>
    <string name="helis_title">Helis</string>
    <string name="team_b_title">Team B</string>
    <string name="today_active_lineups">Now active %s and %s, time until change - %sh%sm, next lineups: %s and %s</string>
    <string name="selected_day_lineup_text">Lineups for selected date: %s and %s would be available since 11 UTC</string>
    <string name="selected_past_day_lineup_text">Lineups for selected date: %s and %s</string>
    <string name="fab_search">Search</string>
    <string name="channel_name" translatable="false">favorite_vehicle_availability_notify</string>
    <string name="channel_description">shows once a day, when lineups are changed</string>
    <string name="change_log_add">%s(%s) is added to %s</string>
    <string name="change_log_del">%s(%s) is deleted from %s</string>
    <string name="pref_send_crash_logs" translatable="false">send_crash_logs</string>
    <string name="pref_send_statistics" translatable="false">send_statistics</string>
    <string name="pref_filter_key_show" translatable="false">filter_key_show</string>
    <string name="pref_show_daily_notify" translatable="false">show_daily_favorite_notify</string>
    <string name="pref_log_events" translatable="false">log_events_switch</string>
    <string name="chip_title_team_a">A</string>
    <string name="chip_title_team_b">B</string>
    <string name="chip_title_tanks">Tanks</string>
    <string name="chip_title_planes">Planes</string>
    <string name="chip_title_helis">Helis</string>
    <string name="chip_title_low_lineup">Low</string>
    <string name="chip_title_top_lineup">Top</string>
    <string name="chip_title_active_lineup">Now</string>
    <string name="chip_title_later_lineup">Later</string>
    <string name="pref_title_send_crash_log">Send crash logs to the developer</string>
    <string name="pref_title_show_daily_notify">Show daily notification for favorite vehicles</string>
    <string name="pref_title_lineup_list_filter">Lineup list filter</string>
    <string name="pref_title_log_vehicle_event">Log vehicle addition to a lineups</string>
    <string name="pref_title_send_anonym_stat">Send anonymous statistics</string>
    <string name="pref_refresh_lineup_list" translatable="false">pref_refresh_lineup_list</string>
    <string name="pref_title_refresh_lineup_list">Refresh lineup list</string>
    <string name="refresh_started">Refresh started</string>
    <string name="header_collapse_expand_state" translatable="false">Header collapse/expand state</string>
    <string name="vehicle_without_favorite_status" translatable="false">Vehicle without favorite status</string>
    <string name="vehicle_with_favorite_status" translatable="false">Vehicle with favorite status</string>
    <string name="pref_collapse_lineup_list_items" translatable="false">collapse_lineup_list_items</string>
    <string name="pref_title_collapse_lineup_list_items">Collapse lineup list items</string>

    <string-array name="filterShowList">
        <item>Tanks</item>
        <item>Planes</item>
        <item>Helis</item>
        <item>Low lineup</item>
        <item>High lineup</item>
        <item>Now lineup(for today)</item>
        <item>Later lineup(for today)</item>
    </string-array>

    <string-array name="filterShowListValues">
        <item>tanksShow</item>
        <item>planesShow</item>
        <item>helisShow</item>
        <item>lowLineupShow</item>
        <item>highLineupShow</item>
        <item>nowLineupShow</item>
        <item>laterLineupShow</item>
    </string-array>

</resources>
