<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="true"
        android:key="@string/pref_send_crash_logs"
        android:title="@string/pref_title_send_crash_log" />
    <SwitchPreference
        android:defaultValue="true"
        android:key="@string/pref_send_statistics"
        android:title="@string/pref_title_send_anonym_stat" />
    <SwitchPreference
        android:defaultValue="true"
        android:key="@string/pref_show_daily_notify"
        android:title="@string/pref_title_show_daily_notify" />
    <MultiSelectListPreference
        android:defaultValue="@array/filterShowListValues"
        android:entries="@array/filterShowList"
        android:entryValues="@array/filterShowListValues"
        android:key="@string/pref_filter_key_show"
        android:title="@string/pref_title_lineup_list_filter" />
    <SwitchPreference
        android:defaultValue="true"
        android:key="@string/pref_log_events"
        android:title="@string/pref_title_log_vehicle_event" />
    <Preference
        android:key="@string/pref_refresh_lineup_list"
        android:title="@string/pref_title_refresh_lineup_list"
        />
</PreferenceScreen>